--- a/ApolloArchery/app/src/main/res/layout/fragment_create_account.xml
+++ b/ApolloArchery/app/src/main/res/layout/fragment_create_account.xml
@@ -57,7 +57,7 @@
         android:autofillHints=""
         android:background="#FFFFFF"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="text|textPersonName|textCapWords"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -72,7 +72,7 @@
         android:autofillHints=""
         android:background="#FFFFFF"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="text|textPersonName|textCapWords"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/first_name_entry"
         app:layout_constraintHorizontal_bias="0.0"
