--- a/ApolloArchery/app/src/main/res/layout/fragment_shooting.xml
+++ b/ApolloArchery/app/src/main/res/layout/fragment_shooting.xml
@@ -232,6 +232,7 @@
         android:outlineProvider="paddedBounds"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:background="@drawable/cell_shape"
         app:layout_constraintEnd_toStartOf="@+id/shot_two_textView"
         app:layout_constraintTop_toTopOf="@+id/shot_two_textView"
         tools:ignore="HardcodedText,TextSizeCheck" />
@@ -244,6 +245,7 @@
         android:outlineProvider="paddedBounds"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:background="@drawable/cell_shape"
         app:layout_constraintStart_toEndOf="@+id/shot_two_textView"
         app:layout_constraintTop_toTopOf="@+id/shot_two_textView"
         tools:ignore="HardcodedText,TextSizeCheck" />
@@ -257,6 +259,7 @@
         android:outlineProvider="paddedBounds"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:background="@drawable/cell_shape"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shooting_end_dist"
