--- a/ApolloArchery/app/src/main/res/layout/fragment_shooting.xml
+++ b/ApolloArchery/app/src/main/res/layout/fragment_shooting.xml
@@ -6,16 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".fragments.ShootingFragment">
 
-    <com.fullsail.apolloarchary.DrawingSurface
+    <com.fullsail.apolloarchery.DrawingSurface
         android:id="@+id/drawingSurface"
         android:layout_width="0dp"
         android:layout_height="362dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="91dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/six_shot_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/shooting_label" />
 
     <TextView
         android:id="@+id/shooting_label"
